# play/app/apimodels/media/ArticleCreateParams.java
@@ -1,4 +1,4 @@
-package apimodels;
+package apimodels.media;
 
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.fasterxml.jackson.annotation.*;
@@ -7,16 +7,11 @@ import javax.validation.*;
 import java.util.Objects;
 import javax.validation.constraints.*;
 /**
- * Article
+ * ArticleCreateParams
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaPlayFrameworkCodegen", date = "2023-01-24T00:25:45.213559Z[Etc/UTC]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaPlayFrameworkCodegen", date = "2023-01-24T13:21:54.059164Z[Etc/UTC]")
 @SuppressWarnings({"UnusedReturnValue", "WeakerAccess"})
-public class Article   {
-  @JsonProperty("id")
-  @NotNull
-
-  private Integer id;
-
+public class ArticleCreateParams   {
   @JsonProperty("title")
   @NotNull
 
@@ -26,24 +21,7 @@ public class Article   {
   
   private String content;
 
-  public Article id(Integer id) {
-    this.id = id;
-    return this;
-  }
-
-   /**
-   * Get id
-   * @return id
-  **/
-  public Integer getId() {
-    return id;
-  }
-
-  public void setId(Integer id) {
-    this.id = id;
-  }
-
-  public Article title(String title) {
+  public ArticleCreateParams title(String title) {
     this.title = title;
     return this;
   }
@@ -60,7 +38,7 @@ public class Article   {
     this.title = title;
   }
 
-  public Article content(String content) {
+  public ArticleCreateParams content(String content) {
     this.content = content;
     return this;
   }
@@ -86,24 +64,22 @@ public class Article   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    Article article = (Article) o;
-    return Objects.equals(id, article.id) &&
-        Objects.equals(title, article.title) &&
-        Objects.equals(content, article.content);
+    ArticleCreateParams articleCreateParams = (ArticleCreateParams) o;
+    return Objects.equals(title, articleCreateParams.title) &&
+        Objects.equals(content, articleCreateParams.content);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, title, content);
+    return Objects.hash(title, content);
   }
 
   @SuppressWarnings("StringBufferReplaceableByString")
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class Article {\n");
+    sb.append("class ArticleCreateParams {\n");
     
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    title: ").append(toIndentedString(title)).append("\n");
     sb.append("    content: ").append(toIndentedString(content)).append("\n");
     sb.append("}");
